<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracked_title_label" />

            <EditText
                android:id="@+id/tracked_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tracked_title_hint" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracked_place_label" />

            <EditText
                android:id="@+id/tracked_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tracked_place_hint" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracked_date_label" />

            <Button
                android:id="@+id/tracked_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracked_details_label" />

            <EditText
                android:id="@+id/tracked_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tracked_details_hint" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracked_map_label" />

            <TextView
                android:id="@+id/tracked_map_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="LAT AND LONG" />

            <Button
                android:id="@+id/tracked_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/tracked_map_button" />

            <ImageView
                android:id="@+id/tracked_imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:background="@color/cardview_dark_background"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/tracked_imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/tracked_image_button" />

            <Button
                android:id="@+id/tracked_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/tracked_share_button" />

            <Button
                android:id="@+id/tracked_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#F44336"
                android:text="@string/tracked_delete_button"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>